Fix header on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -617,15 +617,6 @@ a.social-icon:focus {
 }
 
 @media only screen and (max-width: 768px) {
-  header {
-    position: fixed;
-    display: none;
-    z-index: 999;
-    animation: none;
-    bottom: 0;
-    height: 100%;
-  }
-
   #mobile-menu-open,
   #mobile-menu-close {
     display: block;
